--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
   command = "CI= npm run build"
 
 [[redirects]]
-  from = "/api/*"
-  to = "https://<YourAppName>.herokuapp.com/api/:splat"
+  from = "/*"
+  to = "https://<YourAppName>.herokuapp.com/:splat"
   status = 200
 
 [[redirects]]
